# SSD_Doghouse-Django

./: README.md  pyproject.toml  pytest.ini
doghouse/: db.sqlite3
doghouse/doghouse/: asgi.py  settings.py  urls.py  views.py  wsgi.py
doghouse/dogs/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
doghouse/dogs/migrations/: 0001_initial.py  0002_alter_dog_interested_users_alter_dog_picture.py  0002_dog_picture.py  0003_alter_dog_picture.py  0004_alter_dog_picture.py  0005_alter_dog_picture.py  0006_remove_dog_interested_users_alter_dog_description_and_more.py  0007_favouritedog_unique_favourites.py  0008_remove_favouritedog_unique_favourites_and_more.py  0009_alter_dog_name.py
doghouse/resources/: dog_breeds.json
doghouse/tests/: test_urls.py
doghouse/tests/dogs/: test_models.py  test_urls.py
